# mlx-rs

./: CLAUDE.md  custom-build-error.txt  main.yml  other-project.toml
examples/bert/: Cargo.toml  README.md
examples/bert/model_files/: config.json
examples/bert/src/: main.rs  model.rs
examples/embedding-service/: Cargo.toml  README.md
examples/embedding-service/src/: main.rs
examples/gemma/: Cargo.toml  README.md
examples/gemma/model_files/: config-2.json  safetensor-2.md
examples/gemma/src/: documentation.md  main.rs  model.rs
examples/modernbert/: Cargo.toml  README.md
examples/modernbert/model_files/: config.json
examples/modernbert/src/: main.rs  model.rs
mlx-lm/src/models/: qwen3.rs
